computer_science/knowledge/devops/Kubernetes/examinations/CKA/templates/configmap_template.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod1
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
    - name: birke-vo
      mountPath: "/etc/birke/"
      readOnly: true
  volumes:
  - name: birke-vo
    configMap:
      name: birke
