computer_science/knowledge/devops/Kubernetes/examinations/CKA/templates/networkpolicy_template.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space1
spec:
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: space2
    - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space2
spec:
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: space1
  egress:
    - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
